# app-storage

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.server  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  unit_config.json
client/: .eslintrc.yml  package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  consts.js  entry.js  index.js  slices.js
client/src/components/: App.jsx  AppForm.jsx  (+6 more)
deploy/: hosts  local_setup.yml  remote_setup.yml  setup.yml
deploy/dockerfiles/: server.Dockerfile  ui.Dockerfile
deploy/files/: app-storage-ci  cert.pem  key.pem
deploy/group_vars/: all.yml  local.yml  remote.yml
deploy/host_vars/: local.yml
deploy/tasks/: render_templates.yml
deploy/templates/: .env.j2  Dockerfile.server.j2  docker-compose.yml.j2  nginx_config.j2  server.Dockerfile.j2  ui.Dockerfile.j2  unit.Dockerfile.j2  unit_config.json.j2
docker/backend/: Dockerfile
requirements/: requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
server/: app.py  apps_management.py  domain.py  environment.py  errors.py  exceptions.py  main.py  repository.py  server.py  services.py  settings.py  utils.py  validation.py
src/: apps_management.py  consts.py  environment.py  errors.py  server.py  utils.py  validation.py
src/lib/: environment.py
src/tests/: conftest.py  test_api.py  test_environment.py  utils.py
tests/: conftest.py  test_api.py  test_environment.py  test_repository.py
(+15 files in other folders)
