[tool.poetry]
name = "app-storage"
version = "0.1.0"
description = ""
authors = ["Polina Novokreschenova <noverianhenon@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
motor = "^2.1.0"
tornado = "^6.0.4"
pydantic = "^1.5.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"
pytest-asyncio = "^0.14.0"
requests = "^2.24.0"
pytest-tornado = "^0.8.1"
docker = "^4.2.2"

[tool.black]
line-length = 88
target-version = ["py37", "py38"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \venv
  | \.pytest_cache
)/
'''

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
